# humansize

./: .travis.yml  Cargo.toml  README.md  changelog.md
examples/: custom_options.rs  sizes.rs
feature-tests/impl-style/: cargo.toml
feature-tests/impl-style/tests/: impl_style.rs
feature-tests/no-alloc/: cargo.toml
feature-tests/no-alloc/tests/: no-alloc.rs  no_alloc.rs
src/: allocating.rs  file_sizes.rs  formatters.rs  impl_style.rs  lib.rs  numeric_traits.rs  scales.rs  traits.rs  utils.rs
src/file_size_opts/: defaults.rs  mod.rs
src/options/: defaults.rs  mod.rs
tests/: test.rs
