[package]
name = "humansize"
version = "1.1.1"
authors = ["Leopold Arkham <leopold.arkham@gmail.com>"]
readme = "README.md"
description = "A configurable crate to easily represent file sizes in a human-readable format."
repository = "https://github.com/LeopoldArkham/humansize"
homepage = "https://github.com/LeopoldArkham/humansize"
documentation = "https://docs.rs/humansize"
keywords = ["size", "formatting", "humanize", "file-size", "size-format"]
categories = ["value-formatting"]
license = "MIT/Apache-2.0"

[dependencies] 
